fix: changed styles for free trial button on mobile menu

--- a/assets/styles/layouts/Header.scss
+++ b/assets/styles/layouts/Header.scss
@@ -388,7 +388,8 @@ body {
 						}
 					}
 
-					&--full {
+					&--full,
+					&--outline {
 						margin: 0.5em 1.25em;
 						width: calc(100% - 2.5em);
 					}
